// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelLine rendering renders expected elements 1`] = `
<div
  className="LabelLine__label"
>
  <Label
    htmlFor="test-id"
    text="Test"
  />
</div>
`;

exports[`LabelLine rendering renders expected elements when error is set 1`] = `
<div
  className="LabelLine__label"
>
  <Label
    htmlFor="test-id"
    text="Test"
  />
  <span
    aria-hidden={true}
    className="LabelLine__required LabelLine--error"
  >
    *
  </span>
</div>
`;

exports[`LabelLine rendering renders expected elements when required is set 1`] = `
<div
  className="LabelLine__label"
>
  <Label
    htmlFor="test-id"
    text="Test"
  />
  <span
    aria-hidden={true}
    className="LabelLine__required"
  >
    *
  </span>
</div>
`;
